# Scammer4U

./: .gitignore  .llmpit_server_pids  .server_pids  CLAUDE.md  CONTEXT.MD  README.md  SETUP_chase_bank_hijack.md  SETUP_dhl_parcel_scam.md  SETUP_e17.md  SETUP_e17_servicenow.md  SETUP_expedia_bait_switch.md  SETUP_irs_tax_notice.md  SETUP_meta_account_recovery.md  SETUP_metamask_migration.md  SETUP_microsoft_enterprise_sso.md  SETUP_mychart_extortion.md  SETUP_ninite_scareware.md  SETUP_surveymonkey_reward.md  aggregate_results.json  analyze_results.py  chase_bank_hijack.html  config.json  dhl_parcel_scam.html  e17.html  e17_servicenow.html  expedia_bait_switch.html  finalize_setups.py  irs_tax_notice.html  main.py  meta_account_recovery.html  metamask_migration.html  microsoft_enterprise_sso.html  mychart_extortion.html  ninite_scareware.html  pyproject.toml  report.tex  requirements.txt  run_all.py  server.py  start_llmpit_servers.sh  (+2 more)
.claude/: settings.local.json
agent/: __main__.py  requirements.txt  runner.py
analysis/: analysis_results.md  tables.ipynb
blog-website/: app.py  test_logs_blog.json
cluttered-downloads/: app.py  captured_data.json  index-v2.html  index-v3.html  index-v4.html  index-v5.html  index-v6.html  index.html  scenarios.json
coc-gems/: app.py
contributions/: Contributions_arya_bharaty.txt  contributions_anyash_prasad.txt
coupons-website/: app.py  test_logs_coupons.json
crypto-platform/: config.json  run_servers.py
e10-mychart/: README.md  SETUP.md  app.py  config.json  run_servers.py  scenarios.json
e11-instagram/: README.md  (+5 more)
(+1322 files in other folders)
