[project]
name = "freelance-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask==3.0.0",
    "flask-cors==4.0.0",
    "google-genai>=1.68.0",
    "openai>=1.30.0",
    "pillow>=12.1.1",
    "playwright>=1.58.0",
    "pyyaml>=6.0.3",
]
